test/functions/bradc/intents/intents-strings.error4.good
intents-strings.chpl:42: In function 'hoo':
intents-strings.chpl:45: error: cannot assign to const variable
intents-strings.chpl:76: Function 'hoo' instantiated as: hoo(x: string)
